[package]
name = "monopoly_abm"
version = "0.0.1"
authors = ["Dan Dixey <Dan.Dixey@woodmac.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8"
log = "0.4"
rand = "0.8.3"
serde = { version = "1", features = ["derive"] }
num_enum = "0.5.1"

[lib]
name = "monopoly_abm"
path = "src/lib.rs"
bench = false
doc = true
doctest = false
test = true
